compiler/src/test/resources/amyc/typer/passing/Logical.amy
module Logical
  true || false && !false
end Logical
