compiler/src/test/resources/amyc/typer/failing/LogicalError2.amy
module LogicalError
  () && true
end LogicalError
